Set stream catalog API request limit to 500 & make the limit a parameter of the application